--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -47,10 +47,12 @@
         </div>
         <div class="col">
           <ul class="info">
-            <li>
+            <li class="email">
               <h5>captain.ravenmoor@gmail.com</h5>
+            </li>
+            <li>
               <h5>
-              (206) 372-6501
+              (206)-372-6501
               </h5>
             </li>
             <li>
@@ -83,7 +85,7 @@
     </div>
   </nav>
   <main class="container" role="main">
-    <div class="col main">
+    <div class="mt-3">
      {% block body %}
      {% endblock %}
     </div>
@@ -96,7 +98,7 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="row justify-content-lg-center">
+      <div class="row">
         <div class="col">
           <h5 class="footer-text">Address</h5>
           <hr>
@@ -120,9 +122,9 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div class="footer cp-box">
-      <h5 class="cp">©2017 BY RAVENMOORE VALLEY FORGE</h5>
+      <div class="cp-box">
+        <h5 class="cp">©2017 BY RAVENMOORE VALLEY FORGE</h5>
+      </div>
     </div>
   </footer>
 
