--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -47,8 +47,8 @@
         </div>
         <div class="col">
           <ul class="info">
-            <li class="email">
-              <h5>captain.ravenmoor@gmail.com</h5>
+            <li>
+              <h5>captain.&#8203;ravenmoor&#8203;@gmail.com</h5>
             </li>
             <li>
               <h5>
@@ -64,12 +64,12 @@
           </ul>
         </div>
       </div>
-      {% if user %}
+      {% if user.is_staff %}
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapse-right" aria-controls="#collapse-right" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon">
           </span>
       </button>
-      <div id="collapse-right" class="collapse navbar-collapse" >
+      <div id="collapse-right" class="collapse navbar-collapse">
         <ul class="nav navbar-nav ml-auto">
           {% if user.is_staff %}
           <li class="nav-item {% if nbar == 'add-prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add a Product</a></li>
@@ -80,6 +80,12 @@
           <li class="nav-item"><a class="nav-link" href="{% url 'admin:login' %}">Admin</a></li>
           {% endif %}
         </ul>
+      {% else %}
+      <div id="collapse-right" class="collapse navbar-collapse"></div>
+      <button class="navbar-toggler collapsed hide-nav" type="button" data-toggle="collapse" data-target="#collapse-right" aria-controls="#collapse-right" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">
+          </span>
+      </button>
       {% endif %}
       </div>
     </div>
@@ -89,11 +95,6 @@
      {% block body %}
      {% endblock %}
     </div>
-    {% for thing in things %}
-      <p>
-        {{ thing }}
-      </p>
-    {% endfor %}
   </main>
 
   <footer class="footer">
@@ -122,8 +123,12 @@
           </ul>
         </div>
       </div>
-      <div class="cp-box">
-        <h5 class="cp">©2017 BY RAVENMOORE VALLEY FORGE</h5>
+    </div>
+    <div class="cp-box">
+      <div class="container">
+        <div class="row">
+          <h5 class="col">©2017 BY RAVENMOORE VALLEY FORGE</h5>
+        </div>
       </div>
     </div>
   </footer>
