working on html and css.

--- a/RVFS/RVFS/templates/rvfsite/home.html
+++ b/RVFS/RVFS/templates/rvfsite/home.html
@@ -41,8 +41,8 @@ Home
   </a>
 </div>
 
-<p>{{ Hello }}</p>
-<p>
+<p class="page-text">{{ Hello }}</p>
+<p class="page-text">
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis orci sed sem blandit lobortis non vel tellus. Nulla a finibus sem. Nulla ac risus est. Sed id nulla in nisl pulvinar rhoncus et a lorem. Ut volutpat magna et interdum rhoncus. Duis luctus lobortis lacinia. Etiam fermentum mauris sit amet luctus sagittis. Suspendisse id volutpat neque, sit amet efficitur est.
 
