--- a/RVFS/static/app.css
+++ b/RVFS/static/app.css
@@ -4,12 +4,14 @@ html {
 }
 
 body {
-    background: radial-gradient(rgb(190, 220, 10), rgb(215, 20, 50));
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url('Backgroundonly.png');
     margin-bottom: 155px;
 }
 
-nav {
-    background: radial-gradient(black, grey);
+.nav-back {
+    background-color: rgb(120, 0, 0);
 }
 
 .main {
@@ -33,6 +35,11 @@ nav {
 
 .banner-text {
     color: #bfbfbf;
+}
+
+.banner-img {
+    width: 100px;
+    height: 100px;
 }
 
 .footer-text {
@@ -77,6 +84,10 @@ nav {
 .navbar {
     padding: 0 15px;
     margin-bottom: 2rem;
+}
+
+.page-text {
+    color: white;
 }
 
 
