finished out majority of css and html elements working into models.

--- a/RVFS/RVFS/templates/rvfsite/about.html
+++ b/RVFS/RVFS/templates/rvfsite/about.html
@@ -7,16 +7,68 @@ About
 {% endblock %}
 
 {% block body %}
-<p>{{ Hello }}</p>
-<p>
+<h1 class="section-heads">About the Shop:</h1>
+<p class="about-text">
+Our Burien workshop is crewed by a team of designers and artisans who will help you bring your creations to life. We offer a variety of metalworking services out of our forge and fabrication shops, including made-to-order custom fabrication, maintenance and repair of metalwork items, removal of scrap metal and materials in addition to a catalog of pre-made metal tools and artwork. Our capabilities as a shop are constantly advancing as we add new tools to our shops and new skills to our repertoire to refine our craft and our wares.
+</p>
+<p class="about-text">
+Our crew consists of Muninn and Huginn Ravenmoore, the owner and manager of RVFM respectively, along with Gordon Baylock out in the shop. When you arrive, you will likely meet with Huginn if Muninn is out in the shop with Gordon to place your order or consult on your design. From there, Muninn and Gordon will work to fabricate your design and have it ready for you to pick up from the shop. You might even meet Isis the shop dog, too!
+</p>
+<p class="about-text">
+Take a look in the shop Gallery for a glimpse at where the magic happens!
+</p>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis orci sed sem blandit lobortis non vel tellus. Nulla a finibus sem. Nulla ac risus est. Sed id nulla in nisl pulvinar rhoncus et a lorem. Ut volutpat magna et interdum rhoncus. Duis luctus lobortis lacinia. Etiam fermentum mauris sit amet luctus sagittis. Suspendisse id volutpat neque, sit amet efficitur est.
+<a class="next-link" href="#"><h2>Visit the Forge!</h2></a>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<h1 class="section-heads">Meet The Crew:</h1>
 
-Sed quam nisl, efficitur eget faucibus id, tristique at diam. Duis elementum vulputate risus, at vestibulum felis iaculis sed. Morbi sagittis, dolor non cursus aliquet, metus nisl semper risus, in faucibus nisi erat a leo. Aenean aliquet tellus ante, a ullamcorper nibh aliquet non. Fusce mollis sed lectus at dictum. Aliquam ut tellus vulputate orci tristique fringilla id nec ligula. Curabitur et erat eget magna facilisis semper vel ut magna. Aliquam erat volutpat. Duis id eleifend arcu, nec finibus eros.
+<h2 class="section-heads section-sub-heads">The Office</h2>
 
-Duis est leo, porta vel viverra laoreet, facilisis vitae sapien. Aliquam interdum aliquam lorem, convallis pellentesque tellus consequat in. Proin vestibulum risus nec urna aliquet malesuada. Proin sed sagittis diam. Donec ut mollis velit. Sed mollis risus id elit bibendum commodo. Pellentesque sagittis dignissim est in vehicula. Nullam volutpat eget lectus ac volutpat. Curabitur ex metus, consequat sed dignissim quis, accumsan sed neque. Integer tempus viverra velit, id elementum nisl. Aliquam placerat nibh eget sem mollis congue. Vivamus interdum eu erat eget gravida. Ut non iaculis nunc. Nulla tincidunt lectus urna, eget elementum lorem laoreet mollis. Phasellus leo augue, fringilla porta libero sit amet, aliquam placerat mi. Pellentesque pharetra volutpat consectetur.
+<div class="bio-left row">
+    <div class="col">
+        <img src="#">
+        <h3 class="names">Huginn Ravenmoore </h3>
+    </div>
 
-Sed at feugiat ligula, in luctus urna. Integer commodo aliquet rutrum. Cras quis metus dictum, maximus turpis non, fringilla nisi. Pellentesque quis massa est. Donec ornare dolor sit amet risus vestibulum, et porta neque venenatis. Pellentesque dignissim enim purus, non elementum nibh aliquam id. Suspendisse feugiat blandit arcu, non elementum mauris mattis sed. Fusce id nibh sapien. Suspendisse potenti. Sed ornare ex ipsum, nec condimentum lectus posuere ut. Praesent ut elit id urna dignissim elementum eu sit amet felis. Curabitur efficitur ipsum quis velit fermentum, nec fringilla ex faucibus. Phasellus accumsan interdum venenatis. Morbi sed laoreet elit. In massa quam, elementum vulputate porta sed, sagittis nec tellus.
+    <p class="col-9 about-text">
+    Huginn serves as an office manager and PR rep for the shop, and is who you will likely be first meeting with when doing business with RVFM. In addition, she is an artist and a designer for the shop, and can help you put your ideas down on paper before the Boys take them out to the forge.  Huginn is among many other things: a performer with fire and steel, a lover of animals, the lovely fiance to Muninn, and an expectant mother; she is looking forward to the future with high anticipation.  Once her family and the forge are in order, Huginn dreams of traveling with Muninn and capturing the sights of the world with him.
+    </p>
+</div>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<h2 class="section-heads section-sub-heads">The Boys in the Shop</h2>
 
-Pellentesque molestie turpis a lectus sollicitudin, eu rhoncus neque ultricies. Vestibulum euismod eleifend nisl non laoreet. Etiam eget urna nunc. Vivamus at auctor nunc. Morbi dapibus nec libero nec auctor. Donec odio est, ullamcorper vitae suscipit nec, interdum nec arcu. In facilisis maximus vulputate. Sed semper tristique lectus ac eleifend. Aliquam tempus tempor odio nec bibendum. Maecenas at iaculis erat. Nullam sollicitudin bibendum orci eget malesuada. Vivamus venenatis faucibus nibh, id tempor sapien blandit ac. Praesent hendrerit tempor metus ac blandit. Nulla blandit non felis at commodo. Aenean sit amet turpis vel turpis euismod facilisis ac eget odio. Phasellus vel ex at ex sollicitudin lobortis vel quis tortor. </p>
+<div class="bio-right row">
+    <div class="col">
+        <img src="#">
+        <h3 class="names">Muninn Ravenmoore </h3>
+    </div>
+
+    <p class="col-9 about-text">
+    Both the owner and lead designer for the shop Muninn, has 10 years of experience in both craft and design work, along with a firm understanding of the science of metal. As the leader of a fire troupe and the captain of a pirate-LARP  eventing crew, Muninn frequently works out on the field with what he makes in the shop. Muninn discovered both a talent and a passion for metalworking in the course of eventing, admiring the work of others and opting to try his hand at it. While focusing on his family and getting RVFM operational for now, Muninn dreams of traveling and refining his craft under the tutelage of masters from around the world.
+    </p>
+</div>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<div class="bio-left row">
+    <div class="col">
+        <img src="#">
+        <h3 class="names">Gordon Blaylock </h3>
+    </div>
+
+    <p class="col-9 about-text">
+    Gordon is our shop apprentice from Salem, Oregon, and is the youngest member of our crew at 17. Gordon is working on finishing his GED and moving on to getting an education in metalworking and mechanics. He has a passion for old trucks and cars, from which he has developed an acute attention to detail that serves him well in the shops. He is a member of Muninn’s LARP and fire crews as well, and met Muninn in the eventing world before becoming his apprentice.
+    </p>
+</div>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<div class="bio-right row">
+    <div class="col">
+        <img src="#">
+        <h3 class="names">Isis</h3>
+        <h4 class="names">(shop Dog)</h4>
+    </div>
+
+    <p class="col-9 about-text">
+    Our dutiful shop pup, Isis (named for the ancient egyptian goddess of magic and wisdom) is an excitable but laid-back girl who would be delighted to meet you! She is very attentive to the needs of the crew in determining when they need to take breaks, often by dropping tennis balls at their feet and staring expectantly.
+    </p>
+</div>
+
 {% endblock %}
