--- a/RVFS/RVFS/templates/rvfsite/home.html
+++ b/RVFS/RVFS/templates/rvfsite/home.html
@@ -41,16 +41,8 @@ Home
   </a>
 </div>
 
-<p class="page-text">{{ Hello }}</p>
-<p class="page-text">
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis orci sed sem blandit lobortis non vel tellus. Nulla a finibus sem. Nulla ac risus est. Sed id nulla in nisl pulvinar rhoncus et a lorem. Ut volutpat magna et interdum rhoncus. Duis luctus lobortis lacinia. Etiam fermentum mauris sit amet luctus sagittis. Suspendisse id volutpat neque, sit amet efficitur est.
-
-Sed quam nisl, efficitur eget faucibus id, tristique at diam. Duis elementum vulputate risus, at vestibulum felis iaculis sed. Morbi sagittis, dolor non cursus aliquet, metus nisl semper risus, in faucibus nisi erat a leo. Aenean aliquet tellus ante, a ullamcorper nibh aliquet non. Fusce mollis sed lectus at dictum. Aliquam ut tellus vulputate orci tristique fringilla id nec ligula. Curabitur et erat eget magna facilisis semper vel ut magna. Aliquam erat volutpat. Duis id eleifend arcu, nec finibus eros.
-
-Duis est leo, porta vel viverra laoreet, facilisis vitae sapien. Aliquam interdum aliquam lorem, convallis pellentesque tellus consequat in. Proin vestibulum risus nec urna aliquet malesuada. Proin sed sagittis diam. Donec ut mollis velit. Sed mollis risus id elit bibendum commodo. Pellentesque sagittis dignissim est in vehicula. Nullam volutpat eget lectus ac volutpat. Curabitur ex metus, consequat sed dignissim quis, accumsan sed neque. Integer tempus viverra velit, id elementum nisl. Aliquam placerat nibh eget sem mollis congue. Vivamus interdum eu erat eget gravida. Ut non iaculis nunc. Nulla tincidunt lectus urna, eget elementum lorem laoreet mollis. Phasellus leo augue, fringilla porta libero sit amet, aliquam placerat mi. Pellentesque pharetra volutpat consectetur.
-
-Sed at feugiat ligula, in luctus urna. Integer commodo aliquet rutrum. Cras quis metus dictum, maximus turpis non, fringilla nisi. Pellentesque quis massa est. Donec ornare dolor sit amet risus vestibulum, et porta neque venenatis. Pellentesque dignissim enim purus, non elementum nibh aliquam id. Suspendisse feugiat blandit arcu, non elementum mauris mattis sed. Fusce id nibh sapien. Suspendisse potenti. Sed ornare ex ipsum, nec condimentum lectus posuere ut. Praesent ut elit id urna dignissim elementum eu sit amet felis. Curabitur efficitur ipsum quis velit fermentum, nec fringilla ex faucibus. Phasellus accumsan interdum venenatis. Morbi sed laoreet elit. In massa quam, elementum vulputate porta sed, sagittis nec tellus.
-
-Pellentesque molestie turpis a lectus sollicitudin, eu rhoncus neque ultricies. Vestibulum euismod eleifend nisl non laoreet. Etiam eget urna nunc. Vivamus at auctor nunc. Morbi dapibus nec libero nec auctor. Donec odio est, ullamcorper vitae suscipit nec, interdum nec arcu. In facilisis maximus vulputate. Sed semper tristique lectus ac eleifend. Aliquam tempus tempor odio nec bibendum. Maecenas at iaculis erat. Nullam sollicitudin bibendum orci eget malesuada. Vivamus venenatis faucibus nibh, id tempor sapien blandit ac. Praesent hendrerit tempor metus ac blandit. Nulla blandit non felis at commodo. Aenean sit amet turpis vel turpis euismod facilisis ac eget odio. Phasellus vel ex at ex sollicitudin lobortis vel quis tortor. </p>
+<p class="carousel-text">Welcome to Ravenmoore Valley Forge &amp; Metalworks, where our crew of designers and artisans
+can craft anything from the simplest of works to the most intricate of designs.
+</p>
+<a class="next-link" href="{% url 'about' %}"><h2>Meet the Crew!</h2></a>
 {% endblock %}
