--- a/RVFS/account/templates/account.html
+++ b/RVFS/account/templates/account.html
@@ -1,63 +1,131 @@
 {% extends 'rvfsite/base.html' %}
 {% load static %}
 {% load thumbnail %}
+{% load mathfilters %}
 
 {% block title %}
 Account
 {% endblock %}
 
 {% block body %}
-<p>{{ account }}</p>
-{% if account.pic %}
-<img class="img-fluid acc-pic" src='{{ account.pic.url }}'>
-{% endif %}
-<p>{{ account.first_name }}</p>
-<p>{{ account.last_name }}</p>
-<p>{{ account.birth_day }}</p>
-<p>{{ addresses.address1 }}</p>
-<p>{{ addresses.address2 }}</p>
-<p>{{ addresses.zip_code }}</p>
-<p>{{ addresses.city }}</p>
-<p>{{ addresses.state }}</p>
+<div class="row acc-info-row">
+    {% if account.pic %}
+    <div class="col">
+    <img class="img-fluid acc-pic" src='{{ account.pic.url }}'>
+    </div>
+    {% endif %}
+    <div class="col">
+    <h3>Account Info:</h3>
+    <h5>Username: </h5><h5>{{ account }}</h5>
+    <h5>Name: </h5><h5>{{ account.first_name }}, {{ account.last_name }}</h5>
+    <h5>Birthday: </h5><h5>{{ account.birth_day }}</h5>
+    </div>
+    <div class="col">
+    <h3>Shipping Info:</h3>
+    <h5>Address Line 1: </h5><h5>{{ addresses.address1 }}</h5>
+    {% if addresses.address2 %}
+    <h5>Address Line 2: </h5><h5>{{ addresses.address2 }}</h5>
+    {% endif %}
+    <h5>Zip Code: </h5><h5>{{ addresses.zip_code }}</h5>
+    <h5>City: </h5><h5>{{ addresses.city }}</h5>
+    <h5>State: </h5><h5>{{ addresses.state }}</h5>
+    </div>
+</div>
+<div class="row acc-row">
 <h3>Saved products list:</h3>
 {% if account.saved_products %}
-    <ul>
     {% for item in account.saved_products %}
-        <li>{{ item }}</li>
+        <ul class="col">
+        {% if forloop.counter == 0 or forloop.counter|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 1 or forloop.counter|sub:1|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 2 or forloop.counter|sub:2|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
     {% endfor %}
-    </ul>
 {% else %}
-<h5>You have no saved products yet.</h5>
+<h5 class="w-100">You have no saved products yet.</h5>
 {% endif %}
+</div>
+<div class="row acc-row">
 <h3>Saved services list:</h3>
 {% if account.saved_services %}
-    <ul>
     {% for service in account.saved_services %}
-        <li>{{ service }}</li>
+        <ul class="col">
+        {% if forloop.counter == 0 or forloop.counter|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 1 or forloop.counter|sub:1|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 2 or forloop.counter|sub:2|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
     {% endfor %}
-    </ul>
 {% else %}
-<h5>You have no saved services yet.</h5>
+<h5 class="w-100">You have no saved services yet.</h5>
 {% endif %}
+</div>
+<div class="row acc-row">
 <h3>Product purchase history:</h3>
 {% if account.purchase_history %}
-    <ul>
     {% for item in account.purchase_history %}
-        <li>{{ item }}</li>
+        <ul class="col">
+        {% if forloop.counter == 0 or forloop.counter|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 1 or forloop.counter|sub:1|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 2 or forloop.counter|sub:2|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
     {% endfor %}
-    </ul>
 {% else %}
-<h5>You have not purchased any products yet.</h5>
+<h5 class="w-100">You have not purchased any products yet.</h5>
 {% endif %}
+</div>
+<div class="row acc-row">
 <h3>Service purchase history:</h3>
 {% if account.service_history %}
-    <ul>
     {% for service in account.service_history %}
-        <li>{{ service }}</li>
+        <ul class="col">
+        {% if forloop.counter == 0 or forloop.counter|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 1 or forloop.counter|sub:1|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
+        <ul class="col">
+        {% if forloop.counter == 2 or forloop.counter|sub:2|mod:3 == 0 %}
+            <li>{{ service }}</li>
+        {% endif %}
+        </ul>
     {% endfor %}
-    </ul>
 {% else %}
-<h5>You have not purchased any services yet.</h5>
+<h5 class="w-100">You have not purchased any services yet.</h5>
 {% endif %}
+</div>
 
 {% endblock %}
