--- a/RVFS/products/templates/create_product.html
+++ b/RVFS/products/templates/create_product.html
@@ -1,17 +1,17 @@
 {% extends 'rvfsite/base.html' %}
 
-{% block title %}Add a Service{% endblock %}
+{% block title %}Add a Product{% endblock %}
 
 {% block body %}
-<h2>Create a Service</h2>
-    <form class="serv-form" method="post">
+<h2>Create a Product</h2>
+    <form class="prod-form" method="post">
         <div class="row">
         {% for field in form %}
             {% if forloop.counter == 1 %}
             <div class="col">
             <h4>{{ field.label }}:</h4>
             <p>{{ field }}</p>
-            {% elif forloop.counter == 6 %}
+            {% elif forloop.counter == 9 %}
             </div>
             <div class="col">
             <h4>{{ field.label }}:</h4>
