Adding django-secure.

--- a/RVFS/RVFS/templates/rvfsite/about.html
+++ b/RVFS/RVFS/templates/rvfsite/about.html
@@ -67,7 +67,7 @@ Take a look in the shop Gallery for a glimpse at where the magic happens!
     </div>
 
     <p class="col-9 about-text">
-    Our dutiful shop pup, Isis (named for the ancient egyptian goddess of magic and wisdom) is an excitable but laid-back girl who would be delighted to meet you! She is very attentive to the needs of the crew in determining when they need to take breaks, often by dropping tennis balls at their feet and staring expectantly.
+    Our dutiful shop pup, Isis (named for the ancient Egyptian goddess of magic and wisdom) is an excitable but laid-back girl who would be delighted to meet you! She is very attentive to the needs of the crew in determining when they need to take breaks, often by dropping tennis balls at their feet and staring expectantly.
     </p>
 </div>
 
