--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -116,7 +116,9 @@
             <div class="col">
               <h5 class="footer-info">Address</h5>
               <hr class="footer-break">
-              <h6 class="footer-info">11639 13th Ave SW Burien WA United States 98146</h6>
+              <h6 class="footer-info">11639 13th Ave SW</h6>
+              <h6 class="footer-info">Burien, WA 98146</h6>
+              <h6 class="footer-info">United States</h6>
             </div>
             <div class="col">
               <h5 class="footer-info">Contact</h5>
