--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine:bold|Niconne">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/app.css' %}">
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
   {% block head %}
   {% endblock %}
 </head>
@@ -81,7 +82,14 @@
             <div id="collapse-left" class="collapse navbar-collapse">
               <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item {% if nbar == 'home' %}active{% endif %}"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                {% if nbar != 'cata' and nbar != 'prods' and nbar != 'servs' %}
                 <li class="nav-item {% if nbar == 'about' %}active{% endif %}"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                {% endif %}
+                <li class="nav-item {% if nbar == 'cata' %}active{% endif %}"><a class="nav-link" href="{% url 'cata' %}">Catalog</a></li>
+                {% if nbar == 'cata' or nbar == 'prods' or nbar == 'servs' %}
+                <li class="nav-item {% if nbar == 'prods' %}active{% endif %}"><a class="nav-link" href="{% url 'prods' %}">Products</a></li>
+                <li class="nav-item {% if nbar == 'servs' %}active{% endif %}"><a class="nav-link" href="{% url 'servs' %}">Services</a></li>
+                {% endif %}
                 {% if user.is_authenticated %}
                   <li class="nav-item {% if nbar == 'account' %}active{% endif %}"><a class="nav-link" href="{% url 'account' %}">Account</a></li>
                   <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
@@ -96,8 +104,8 @@
             <div class="w-100">
               <div id="collapse-right" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ml-auto">
-                  <li class="nav-item {% if nbar == 'add-prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add a Product</a></li>
-                  <li class="nav-item {% if nbar == 'add-serv' %}active{% endif %}"><a class="nav-link" href="{% url 'add_serv' %}">Add a Service</a></li>
+                  <li class="nav-item {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add a Product</a></li>
+                  <li class="nav-item {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link" href="{% url 'add_serv' %}">Add a Service</a></li>
 
                 {% if user.is_superuser %}
                   <li class="nav-item"><a class="nav-link" href="{% url 'admin:login' %}">Admin</a></li>
